# decentralized-file-storage

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tempCodeRunnerFile  tempCodeRunnerFile.cpp  tsconfig.json
app/: globals.css  layout.tsx  page.tsx
components/: ConnectWallet.tsx  DisplayFiles.tsx  DragFiles.tsx  Footer.tsx  Header.tsx  MainContent.tsx  MintbaseWalletProvider.tsx  Provider.tsx  ShowBalance.jsx  WalletBalance.jsx  WalletBalance.tsx  callContract.js  checkNearBalance.js  config.js
context/: store.jsx
lib/: nearConfig.ts  nearContract.ts
res/: contract.wasm
src/: deduct_near.rs  lib.rs  transfer_contract.rs
types/: index.ts
