[package]
name = "decentralized-file-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
near-sdk = "4.0.0-pre.4"  # Use the latest version available

[lib]
crate-type = ["cdylib"]

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
debug = false
panic = "abort"